--- a/src/css/favorites.css
+++ b/src/css/favorites.css
@@ -1,6 +1,6 @@
 /* Favorites page styles */
 .empty-page {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -12,22 +12,80 @@
   gap: 24px;
   margin-bottom: 60px;
 }
+.favorites-content {
+  display: flex;
+  margin-top: 44px;
+  margin-bottom: 64px;
+}
 .favorites-img-tablet,
 .favorites-img-desktop {
   display: none;
 }
 
+/* Recipe card styles */
+.recipe-results-fav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  margin-top: 50px;
+}
+
+.details-card-container {
+  bottom: 16px;
+  width: 80%;
+}
+
+.rating {
+  display: flex;
+  gap: 2px;
+  align-items: center;
+  color: #fff;
+}
+.stars-container {
+  display: flex;
+}
+
+.recipe-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.main-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 /* Tablet */
 @media screen and (min-width: 768px) {
-  /* Favorites page styles */
-
+  .favorites-img-mobile {
+    display: none;
+  }
   .empty-page {
     font-size: 16px;
-    margin-top: 20px;
     max-width: 400px;
   }
   .favorites-img-tablet {
     display: block;
+  }
+
+  /* Recipe card styles */
+  .recipe-results-fav {
+    flex-direction: row;
+    flex-flow: wrap;
+    max-width: 720px;
+    margin-left: 25px;
+  }
+
+  .rating {
+    flex-direction: row;
+  }
+  .stars-container {
+    display: flex;
+    width: 45px;
   }
 }
 
@@ -42,5 +100,13 @@
   }
   .favorites-img-tablet {
     display: none;
+  }
+  /* Recipe card styles */
+  .recipe-results-fav {
+    max-width: 1120px;
+  }
+  .stars-container {
+    display: flex;
+    width: 75px;
   }
 }
